Closed Bug 1215296 Opened 10 years ago Closed 10 years ago

QueryProgramInfo doesn't handle interface fields very well

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: jrmuizel, Unassigned)

References

Details

(Whiteboard: [gfx-noted])

Attachments

(1 file, 1 obsolete file)

It gets confused by the name mappings not showing from ShGetUniforms
Blocks: 1215279
Whiteboard: [gfx-noted]
I filed an ANGLE bug about this but it was won't fixed: https://code.google.com/p/angleproject/issues/detail?id=1181
Attached patch WIP to get things working (obsolete) — Splinter Review
I have this working now.
This approach is more inline with what was suggested by the ANGLE people.
Attachment #8677102 - Attachment is obsolete: true
Attachment #8685058 - Flags: review?(jgilbert)
Comment on attachment 8685058 [details] [diff] [review] Also look in interface blocks when looking for uniforms Review of attachment 8685058 [details] [diff] [review]: ----------------------------------------------------------------- ::: dom/canvas/WebGLShaderValidator.cpp @@ +392,5 @@ > return true; > } > > + const std::vector<sh::InterfaceBlock>& interfaces = *ShGetInterfaceBlocks(mHandle); > + for (const auto &interface : interfaces) { & against type.
Attachment #8685058 - Flags: review?(jgilbert) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: