Bug 1215296. Map uniforms from blocks. r=jgilbert

Uniforms from uniform blocks don't show up in the result of ShGetUniforms.
We need to use ShGetInterfaceBlocks instead.